--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@heroicons/vue": "^2.1.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
